--- a/milestone 2/css/style.css
+++ b/milestone 2/css/style.css
@@ -5,4 +5,11 @@ body {
 .wrapper {
     height: 100vh;
     width: 100%;
+    margin: 0 auto;
+}
+
+.box {
+    border: 1px solid black;
+    /* height: 50px; */
+    width: calc(100% / 10);
 }
