--- a/milestone 3/css/style.css
+++ b/milestone 3/css/style.css
@@ -1,3 +1,17 @@
 body {
     background-color: rgb(129, 91, 41);
 }
+
+.wrapper {
+    height: 100vh;
+    width: 100%;
+    /* margin: 0 auto; */
+}
+
+
+
+.box {
+    border: 1px solid black;
+    width: calc(100% / 10);
+    aspect-ratio: 1/1;
+}
